--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -593,7 +593,7 @@
         recurse: yes
       tags: set_nginx_user_group
     - name: backup nginx conf
-      shell: cp -rp /usr/nginx/conf /usr/nginx/conf.bak
+      shell: \cp -rp /usr/nginx/conf /usr/nginx/conf.bak
       tags: backup_nginx_conf
   handlers:
       - name: reload systemd
