--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,5 +1,5 @@
 [opp_prod]
-192.168.152.121
-192.168.152.122
-192.168.152.123
-192.168.152.124
+192.168.152.121 custom_hostname=poxappprd52b
+192.168.152.122 custom_hostname=poxappprd52c
+192.168.152.123 custom_hostname=poxappprd52d
+192.168.152.124 hostname=poxappprd52e
