--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -2,4 +2,4 @@
 192.168.152.121 custom_hostname=poxappprd52b
 192.168.152.122 custom_hostname=poxappprd52c
 192.168.152.123 custom_hostname=poxappprd52d
-192.168.152.124 hostname=poxappprd52e
+192.168.152.124 custom_hostname=poxappprd52e
