--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -674,6 +674,9 @@
         state: started
         enabled: yes
       tags: node_exporter_service_start
+    - name: check node_exporter status
+      shell: curl http://127.0.0.1:9100/metrics
+      tags: check_node_exporter_status
   handlers:
       - name: reload systemd
         ansible.builtin.systemd:
