--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -639,19 +639,25 @@
         src: /opt/squid/etc
         dest: /opt/squid/
       tags: sync_squid_etc
-#######
-### /opt/squid/sbin/squid -k parse -f /opt/squid/etc/squid.conf
-#######
     - name: sync squid_shell
       ansible.posix.synchronize:
         src: /opt/squid_shell
         dest: /opt/
       tags: sync_squid_shell
-    - name: sync sync_py_prod
+    - name: sync py_prod
       ansible.posix.synchronize:
         src: /opt/py_prod
         dest: /opt/
       tags: sync_py_prod
+    - name: squid parse
+      shell: /opt/squid/sbin/squid -k parse -f /opt/squid/etc/squid.conf
+      tags: squid_parse
+    - name: squid service restart
+      ansible.builtin.systemd:
+        name: squid
+        state: restarted
+        enabled: yes
+      tags: squid_service_restart
 #############################
 #############suduer
 #############################	  
