--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -686,9 +686,16 @@
         src: /etc/logrotate.d/squid
         dest: /etc/logrotate.d/squid
       tags: copy_logrotate_squid
-############# /etc/logrotate.d/nginx
-############# /etc/logrotate.d/python_prod_logs
-#############################
+    - name: copy logrotate nginx
+      ansible.builtin.copy:
+        src: /etc/logrotate.d/nginx
+        dest: /etc/logrotate.d/nginx
+      tags: copy_logrotate_nginx
+    - name: copy logrotate python_prod_logs
+      ansible.builtin.copy:
+        src: /etc/logrotate.d/nginx
+        dest: /etc/logrotate.d/nginx
+      tags: copy_logrotate_python_prod_logs
     - name: opp-crontab create
       ansible.builtin.copy:
         dest: /etc/cron.d/opp-crontab
