--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -603,9 +603,44 @@
         regexp: 'poxappprd52a'
         replace: '{{ custom_hostname }}'
       tags: edit_transproxy_env
-##############
-####  laravel-queue service  ######
-##############
+    - name: laravel-queue service create
+      ansible.builtin.copy:
+        dest: /etc/systemd/system/laravel-queue.service
+        owner: root
+        group: root
+        mode: '0644'
+        content: |
+          [Unit]
+          Description=Laravel Queue Worker
+          After=network.target redis.service  # 若依赖 Redis，需指定
+
+          [Service]
+          User=nginx
+          Group=nginx
+          WorkingDirectory=/usr/nginx/html/transproxy_admin
+          ExecStart=/usr/bin/php -d memory_limit=512M artisan queue:work \
+                              --tries=3 \
+                              --timeout=120
+          
+          Restart=always
+          RestartSec=5
+          MemoryLimit=1G
+          
+          # 环境变量（重要！）
+          #Environment="REDIS_HOST=127.0.0.1"
+          #Environment="DB_HOST=127.0.0.1"
+          #Environment="APP_ENV=production"
+          
+          [Install]
+          WantedBy=multi-user.target
+      notify: reload systemd
+      tags: laravel_queue_service_create
+    - name: laravel_queue service start
+      ansible.builtin.systemd:
+        name: laravel-queue
+        state: started
+        enabled: yes
+      tags: laravel_queue_service_start
     - name: sync nginx conf
       ansible.posix.synchronize:
         src: /usr/nginx/conf
