--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -23,7 +23,7 @@
         backup: yes
         state: present
       tags: setup_yum_proxy
-    - name: hosts record
+    - name: setup hosts
       blockinfile:
         path: /etc/hosts
         block: |
@@ -33,6 +33,20 @@
         backup: yes
         state: present
       tags: setup_hosts
+    - name: setup resolv.conf
+      ansible.builtin.copy:
+        dest: /etc/resolv.conf
+        owner: root
+        group: root
+        mode: '0644'
+        backup: yes
+        content: |
+          options timeout:5 attempts:1
+          search     corp.ha.org.hk server.ha.org.hk ha.org.hk
+
+          nameserver 210.87.250.48
+          nameserver 210.87.253.13
+      tags: setup_resolv_conf
     - name: setup limits
       blockinfile:
         path: /etc/security/limits.conf
