--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -483,7 +483,7 @@
           After=network.target
           
           [Service]
-          Type=forking
+          Type=notify
           ExecStart=/usr/local/bin/redis-server /etc/redis.conf
           ExecStop=/usr/local/bin/redis-cli -p 6379 -a StrongP@@ssw0rd123! shutdown
           Restart=always
