--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -109,6 +109,7 @@
           - libxslt-devel
           - openldap-clients
           - systemd-devel
+          - ftp
         state: present
       tags: install_dnf_package
 ###########
@@ -732,6 +733,15 @@
         src: /opt/py_prod
         dest: /opt/
       tags: sync_py_prod
+####
+####/opt/squid_shell/ftp_accesslog.sh
+####
+    - name: edit ftp_accesslog
+      ansible.builtin.replace:
+        path: /opt/squid_shell/ftp_accesslog.sh
+        regexp: 'poxappprd52a'
+        replace: '{{ custom_hostname }}'
+      tags: edit_ftp_accesslog
     - name: squid parse
       shell: /opt/squid/sbin/squid -k parse -f /opt/squid/etc/squid.conf
       tags: squid_parse
