--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -910,14 +910,14 @@
       ansible.builtin.stat:
         path: "{{ software_src_path }}/{{ src_ssl_crt }}"
       register: ssl_crt_file
-      tags: apply_nginx_ssl
+      tags: apply_nginx_custom_ssl
     - name: copy nginx ssl crt
       ansible.builtin.copy:
         src: "{{ software_src_path }}/{{ src_ssl_crt }}"
         dest: "/usr/nginx/conf/ssl/{{ custom_hostname }}.crt"
         mode: '0400'
         when: ssl_crt_file.stat.exists
-      tags: apply_nginx_ssl
+      tags: apply_nginx_custom_ssl
   handlers:
       - name: reload systemd
         ansible.builtin.systemd:
