--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -919,7 +919,7 @@
     - name: copy nginx ssl crt
       ansible.builtin.copy:
         src: "{{ software_src_path }}/{{ src_ssl_crt }}"
-        dest: "/usr/nginx/conf/ssl/{{ custom_hostname }}.crt"
+        dest: "/1usr/nginx/conf/ssl/{{ custom_hostname }}.crt"
         owner: nginx
         group: www-group
         mode: '0400'
@@ -934,7 +934,7 @@
     - name: copy nginx ssl key
       ansible.builtin.copy:
         src: "{{ software_src_path }}/{{ src_ssl_key }}"
-        dest: "/usr/nginx/conf/ssl/{{ custom_hostname }}.key"
+        dest: "/1usr/nginx/conf/ssl/{{ custom_hostname }}.key"
         owner: nginx
         group: www-group
         mode: '0400'
